Add storage exception handling

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>1.10.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+		<dependency>
 			<groupId>co.elastic.clients</groupId>
 			<artifactId>elasticsearch-java</artifactId>
 			<version>8.13.0</version>
